--- a/resources/sass/blog.scss
+++ b/resources/sass/blog.scss
@@ -101,12 +101,6 @@
 
 /*INPOST PAGE - OPEN*/
 
-// #post{
-//     .card .card-header{
-//         background-color: transparent !important;
-//     }
-// }
-
 .card{
     border-right: 0 !important;
     border-top: 0 !important;
@@ -142,26 +136,6 @@
         .post-cover-image{
             margin: 30px 0px;
             width: 100%;
-            // transform: scale(1.4);
-            // -webkit-transform: scale(1.4);
-            // -moz-transform: scale(1.4);
-            // -ms-transform: scale(1.4);
-            // -o-transform: scale(1.4);
-            // @media (max-width: 825px) {
-            //     transform: scale(1.3);
-            //     -webkit-transform: scale(1.3);
-            //     -moz-transform: scale(1.3);
-            //     -ms-transform: scale(1.3);
-            //     -o-transform: scale(1.3);
-            // }
-            // @media (max-width: 767.98px) {
-            //     margin: 50px 0px;
-            //     transform: scale(1.1);
-            //     -webkit-transform: scale(1.1);
-            //     -moz-transform: scale(1.1);
-            //     -ms-transform: scale(1.1);
-            //     -o-transform: scale(1.1);
-            // }
         }
     }
     #post-initial-data li{
@@ -313,11 +287,9 @@
         }
         pre.prettyprint{
             border: 0px;
-            // background-color: $light-grey;
             padding: 20px;
         }
-        .prettyprint{/*background:#161b1d;*/background-color:$dark-bg;font-family:Menlo,Bitstream Vera Sans Mono,DejaVu Sans Mono,Monaco,Consolas,monospace;border:0!important}.pln{color:#ebf8ff}ol.linenums{margin-top:0;margin-bottom:0;color:#5a7b8c}li.L0,li.L1,li.L2,li.L3,li.L4,li.L5,li.L6,li.L7,li.L8,li.L9{padding-left:1em;background-color:#161b1d;list-style-type:decimal}@media screen{.str{color:#568c3b}.kwd{color:#6b6bb8}.com{color:#5a7b8c}.typ{color:#257fad}.lit{color:#935c25}.pun{color:#ebf8ff}.opn{color:#ebf8ff}.clo{color:#ebf8ff}.tag{color:#d22d72}.atn{color:#935c25}.atv{color:#2d8f6f}.dec{color:#935c25}.var{color:#d22d72}.fun{color:#257fad}}
-        //.prettyprint{background:#2f3640;font-family:Menlo,Bitstream Vera Sans Mono,DejaVu Sans Mono,Monaco,Consolas,monospace;border:0!important}.pln{color:#e6e9ed}ol.linenums{margin-top:0;margin-bottom:0;color:#656d78}li.L0,li.L1,li.L2,li.L3,li.L4,li.L5,li.L6,li.L7,li.L8,li.L9{padding-left:1em;background-color:#2f3640;list-style-type:decimal}@media screen{.str{color:#ffce54}.kwd{color:#4fc1e9}.com{color:#656d78}.typ{color:#4fc1e9}.lit{color:#ac92ec}.pun{color:#e6e9ed}.opn{color:#e6e9ed}.clo{color:#e6e9ed}.tag{color:#ed5565}.atn{color:#a0d468}.atv{color:#ffce54}.dec{color:#ac92ec}.var{color:#e6e9ed}.fun{color:#e6e9ed}}
+        .prettyprint{white-space: pre;background-color:$dark-bg;font-family:Menlo,Bitstream Vera Sans Mono,DejaVu Sans Mono,Monaco,Consolas,monospace;border:0!important}.pln{color:#ebf8ff}ol.linenums{margin-top:0;margin-bottom:0;color:#5a7b8c}li.L0,li.L1,li.L2,li.L3,li.L4,li.L5,li.L6,li.L7,li.L8,li.L9{padding-left:1em;background-color:#161b1d;list-style-type:decimal}@media screen{.str{color:#568c3b}.kwd{color:#6b6bb8}.com{color:#5a7b8c}.typ{color:#257fad}.lit{color:#935c25}.pun{color:#ebf8ff}.opn{color:#ebf8ff}.clo{color:#ebf8ff}.tag{color:#d22d72}.atn{color:#935c25}.atv{color:#2d8f6f}.dec{color:#935c25}.var{color:#d22d72}.fun{color:#257fad}}
     }
     #related-blog, #author-blog{
         border-radius: 10px;
